--- a/golf/templates/golf/landingpage.html
+++ b/golf/templates/golf/landingpage.html
@@ -22,7 +22,7 @@
 <p>{{ rollups.datetime }}</p>
 <p>£{{ rollups.cost }} online price</p>
 <p>(xx) spaces left</p>
-<button type="button"><a href="{% url 'rollups' %}">Sign up!</a></button>
+<button type="button"><a href="{% url 'customform' %}">Sign up!</a></button>
 {% endfor %}
 <p></p>
 <p>..</p>
