--- a/golf/templates/golf/payment.html
+++ b/golf/templates/golf/payment.html
@@ -1,5 +1,5 @@
 <html>
 <h1>Thank you, Payment successful!!!</h1>
 
-<a href="{% url 'landingpage' %}">Home</a>
+<a href="{% url 'new' %}">Home</a>
 </html>
